# fzs

./: .gitignore  .watchmanconfig  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  cliff.toml
files/: config.toml  fzs_init.zsh  template.zsh
scripts/: cross-build
src/: main.rs
